# diplomacy_self_play

./: .gitignore  AI_DIPLOMACY_INTEGRATION_PLAN.md  EXTERNAL_DEPENDENCIES.md  GRPO_Multi_Agent_Analysis.md  INTEGRATION_SUMMARY.md  PHASE_1_STATUS.md  PLAN.md  README.md  VIRTUAL_ENV_SETUP.md  pyproject.toml  test_command_validation.py  test_direct_integration.py  test_real_ai_diplomacy_integration.py  update_external_deps.sh
AI_Diplomacy/: EXTERNAL_DEPENDENCIES.md  pyproject.toml
AI_Diplomacy/ai_diplomacy/: clients.py
diplomacy_grpo/: __init__.py
diplomacy_grpo/core/: __init__.py  country_sampler.py  country_trainer.py
diplomacy_grpo/integration/: __init__.py  ai_diplomacy_env.py  vllm_client.py
diplomacy_grpo/rewards/: __init__.py  multi_level.py
tests/: __init__.py
tests/integration/: __init__.py  test_ai_diplomacy_integration.py
tests/unit/: test_ai_diplomacy_env_basic.py  test_country_sampler.py  test_multi_level_reward.py  test_vllm_integration.py
verifiers/: pyproject.toml
verifiers/verifiers/trainers/: grpo_trainer.py
